<resources>
    <string name="app_name">MyCalc</string>
    <string name="c">C</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="sqrt">√</string>
    <string name="percent">%</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="point">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mult">*</string>
    <string name="divide">/</string>
    <string name="result">=</string>
    <string name="change">+/-</string>
    <ыstring name="_8">8</ыstring>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
</resources>
