<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.application.mycalc.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:background="@color/backgroundAccent"
        android:id="@+id/relativeLayout"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:text="RESULT"
            android:layout_marginRight="30dp"
            android:textAlignment="center"
            android:id="@+id/tvResult"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:layout_weight="1"
                android:id="@+id/btnClear"
                android:onClick="onClick" />

            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent2"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:layout_height="fill_parent"
                android:text="@string/_7"
                android:id="@+id/btn7"
                android:onClick="onClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent2"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/_4"
                android:id="@+id/btn4"
                android:onClick="onClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent2"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/_1"
                android:id="@+id/btn1"
                android:onClick="onClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/sqrt"
                android:layout_weight="1"
                android:id="@+id/btnSqrt"
                android:onClick="onClick"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:text="@string/change"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:layout_weight="1"
                android:id="@+id/btnChangeSign"
                android:onClick="onClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_marginTop="@dimen/my_dimen"
                android:background="@color/backgroundAccent2"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:layout_height="fill_parent"
                android:text="@string/_8"
                android:id="@+id/btn8"
                android:onClick="onClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent2"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/_5"
                android:id="@+id/btn5"
                android:onClick="onClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent2"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/_2"
                android:id="@+id/btn2"
                android:onClick="onClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent2"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/_0"
                android:layout_weight="1"
                android:id="@+id/btn0"
                android:onClick="onClick"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:text="@string/percent"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:layout_weight="1"
                android:id="@+id/btnPercent"
                android:onClick="onClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent2"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:layout_height="fill_parent"
                android:text="@string/_9"
                android:id="@+id/btn9"
                android:onClick="onClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent2"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/_6"
                android:id="@+id/btn6"
                android:onClick="onClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent2"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/_3"
                android:id="@+id/btn3"
                android:onClick="onClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/point"
                android:layout_weight="1"
                android:id="@+id/btnPoint"
                android:onClick="onClick"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:layout_weight="1"
                android:id="@+id/btnPlus"
                android:onClick="onClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:layout_height="fill_parent"
                android:text="@string/minus"
                android:id="@+id/btnMinus"
                android:onClick="onClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/mult"
                android:id="@+id/btnMultiply"
                android:onClick="onClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/divide"
                android:id="@+id/btnDivide"
                android:onClick="onClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/result"
                android:layout_weight="1"
                android:id="@+id/btnResult"
                android:onClick="onClick"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
