<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.application.mycalc.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:background="@color/backgroundAccent"
        android:id="@+id/relativeLayout"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:text="RESULT"
            android:layout_marginRight="30dp"
            android:textAlignment="center"
            android:id="@+id/tvResult"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="107dp"
                android:layout_height="match_parent"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:layout_weight="1"
                android:id="@+id/button"
                android:onClick="onClick" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:text="@string/change"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"

                android:id="@+id/button2"
                android:onClick="onClick" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:text="@string/percent"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:layout_weight="1"
                android:id="@+id/button3"
                android:onClick="onClick"
                android:layout_column="3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:layout_weight="1"
                android:id="@+id/button4"
                android:onClick="onClick"
                android:layout_column="5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent2"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/_7"
                android:id="@+id/button5"
                android:onClick="onClick"
                android:layout_column="0" />

            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_marginTop="@dimen/my_dimen"
                android:background="@color/backgroundAccent2"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:layout_height="fill_parent"
                android:text="@string/_8"
                android:id="@+id/button6"
                android:onClick="onClick"
                android:layout_column="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent2"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:layout_height="fill_parent"
                android:text="@string/_9"
                android:id="@+id/button7"
                android:onClick="onClick"
                android:layout_column="3" />

            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:layout_height="fill_parent"
                android:text="@string/minus"
                android:id="@+id/button8"
                android:onClick="onClick"
                android:layout_column="5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent2"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/_4"
                android:id="@+id/button9"
                android:onClick="onClick"
                android:layout_column="0" />

            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent2"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/_5"
                android:id="@+id/button10"
                android:onClick="onClick"
                android:layout_column="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent2"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/_6"
                android:id="@+id/button11"
                android:onClick="onClick"
                android:layout_column="3" />

            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/mult"
                android:id="@+id/button12"
                android:onClick="onClick"
                android:layout_column="5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent2"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/_1"
                android:id="@+id/button13"
                android:onClick="onClick"
                android:layout_column="0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent2"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/_2"
                android:id="@+id/button14"
                android:onClick="onClick"
                android:layout_column="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent2"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/_3"
                android:id="@+id/button15"
                android:onClick="onClick"
                android:layout_column="3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/divide"
                android:id="@+id/button16"
                android:onClick="onClick"
                android:layout_column="5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/sqrt"
                android:layout_weight="1"
                android:id="@+id/button17"
                android:onClick="onClick"
                android:layout_column="0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent2"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/_0"
                android:layout_weight="1"
                android:id="@+id/button18"
                android:onClick="onClick"
                android:layout_column="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/point"
                android:layout_weight="1"
                android:id="@+id/button19"
                android:onClick="onClick"
                android:layout_column="3" />

            <Button
                android:textColor="@color/white"
                android:textSize="30sp"
                android:background="@color/backgroundAccent3"
                android:layout_marginTop="@dimen/my_dimen"
                android:layout_marginLeft="@dimen/my_dimen"
                android:layout_marginRight="@dimen/my_dimen"
                android:layout_marginBottom="@dimen/my_dimen"
                android:text="@string/result"
                android:layout_weight="1"
                android:id="@+id/button20"
                android:onClick="onClick"
                android:layout_column="5" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

    </TableLayout>

</RelativeLayout>
